fix #1