@@ -21,6 +21,8 @@ unmanagedResourceDirectories in Compile += baseDirectory.value / "resources"
 
 fork := true
 
+//javaOptions in run ++= Seq("-Xmx1024m", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
+
 scalacOptions ++= Seq("-unchecked", "-deprecation", "-feature")
 
 incOptions := incOptions.value.withNameHashing(nameHashing = true)
